Change strategies to use Stream